# free-claude-code

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_QUALITY_REVIEW.md  README.md  pyproject.toml  server.py
.github/workflows/: tests.yml
api/: app.py  dependencies.py  detection.py  optimization_handlers.py  request_utils.py  routes.py
config/: settings.py
docs/: RESOURCE_OPTIMIZATION_PLAN.md
messaging/: __init__.py  event_parser.py  handler.py  session.py  transcript.py  transcription.py  tree_data.py  tree_processor.py  tree_queue.py
providers/: __init__.py  base.py  logging_utils.py  nvidia_nim.py  openai_compat.py  rate_limit.py
providers/chutes/: __init__.py  client.py  request.py
providers/common/: sse_builder.py
providers/nvidia_nim/: client.py  request.py
tests/: test_api.py  test_app_lifespan_and_errors.py  test_cli.py  test_cli_manager_edge_cases.py  test_event_parser.py  test_handler_format.py  test_handler_markdown_and_status_edges.py  test_logging_utils_edge_cases.py  test_messaging.py  test_nvidia_nim.py  test_reliability.py  test_request_utils_filepaths_and_suggestions.py  test_robust_formatting.py  test_routes_optimizations.py  test_server_module.py  test_session_store_edge_cases.py  test_streaming_errors.py  test_telegram_edge_cases.py  test_transcript.py
tests/api/: test_app_lifespan_and_errors.py  test_dependencies.py
tests/config/: test_config.py
tests/messaging/: test_handler.py  test_handler_markdown_and_status_edges.py  test_messaging.py  test_restart_reply_restore.py  test_transcription.py  test_tree_concurrency.py  test_tree_processor.py  test_tree_queue.py
tests/providers/: test_lmstudio.py  test_streaming_errors.py
utils/: text.py
